e2e/policy/limit-range/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-range
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
    catch:
    - events: {}
  - name: step-01
    try:
    - apply:
        file: 01-create-pod.yaml
    - script:
        content: |
          set -e
          # Verify default resource limits were injected by the LimitRange
          cpu_limit=$(kubectl get pod limit-test-pod -n $NAMESPACE -o jsonpath='{.spec.containers[0].resources.limits.cpu}')
          mem_limit=$(kubectl get pod limit-test-pod -n $NAMESPACE -o jsonpath='{.spec.containers[0].resources.limits.memory}')
          cpu_request=$(kubectl get pod limit-test-pod -n $NAMESPACE -o jsonpath='{.spec.containers[0].resources.requests.cpu}')
          mem_request=$(kubectl get pod limit-test-pod -n $NAMESPACE -o jsonpath='{.spec.containers[0].resources.requests.memory}')
          echo "Limits: cpu=$cpu_limit mem=$mem_limit"
          echo "Requests: cpu=$cpu_request mem=$mem_request"
          test -n "$cpu_limit"
          test -n "$mem_limit"
          test -n "$cpu_request"
          test -n "$mem_request"
    catch:
    - podLogs:
        name: limit-test-pod
        tail: 20
